Row overlap fix

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,6 @@ footer{
 	bottom:0;
 	width: 100%;
 }
+.row{
+	margin-right:0 !important;
+}
